[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/test/LevelGen.gd" type="Script" id=1]
[ext_resource path="res://prefabs/grid/Level.tscn" type="PackedScene" id=2]

[node name="LevelGen" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray(  )

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 1080.0
margin_bottom = 720.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.608
margin_right = 1075.02
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenRoom" type="Button" parent="Control/Container"]
margin_right = 119.0
margin_bottom = 30.0
text = "Generate Rooms"

[node name="GenHallway" type="Button" parent="Control/Container"]
margin_left = 123.0
margin_right = 254.0
margin_bottom = 30.0
text = "Generate Hallways"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="Control/Container"]
margin_left = 258.0
margin_right = 370.0
margin_bottom = 30.0
text = "Connect Rooms"

[node name="Trim" type="Button" parent="Control/Container"]
margin_left = 374.0
margin_right = 475.0
margin_bottom = 30.0
text = "Trim Hallways"

[connection signal="pressed" from="Control/Container/GenRoom" to="." method="_on_GenRoom_pressed"]
[connection signal="pressed" from="Control/Container/GenHallway" to="." method="_on_GenHallway_pressed"]
[connection signal="pressed" from="Control/Container/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Control/Container/Trim" to="." method="_on_Trim_pressed"]
